Tests/Negative/PrivateStructInst.mr
mod Core {
    struct Internal {
        var x: i32;
    }
}

fun main(): i32 {
    var i: Core.Internal;
    return 0;
}
